Fix render on smaller screens

--- a/2020/style.css
+++ b/2020/style.css
@@ -68,9 +68,11 @@ a {
 #portada1-exibit :nth-child(1) {
     padding-bottom: 10px;
 }
+
 #portada1-exibit :nth-child(3) {
     padding-bottom: 27px;
 }
+
 .portada-small {
     max-width: 400px;
 }
@@ -165,38 +167,6 @@ a {
     justify-content: space-between;
 }
 
-@media screen and (min-width: 0px) and (max-width: 550px) {
-    .menu_container {
-        width: 100%;
-    }
-
-    .menu li {
-        padding-right: 20px;
-        padding-left: 10px;
-    }
-}
-@media screen and (min-width: 0px) and (max-width: 800px) {
-    .exibit-gallery { 
-        justify-content: center;
-    }
-    #portada1-exibit {
-        max-height: 2200px;
-        justify-content: center;
-        align-items: center;
-    }
-    #portada2-exibit {
-        max-height: 5200px;
-        justify-content: center;
-        align-items: center;
-    }
-    #portada1-exibit div img {
-        width: 375px;
-    }
-    #portada2-exibit div img {
-        width: 375px;
-    }
-}
-
 .exibit-gallery div {
     padding-top: 30px;
 }
@@ -207,33 +177,62 @@ a {
     text-align: center;
 }
 
-.spaced {
-    padding-bottom: 60px;
-}
-
 .exibit-gallery .double {
     flex-grow: 1;
 }
 
-.exibit-gallery img {
-    max-width: 100%;
+.spaced {
+    padding-bottom: 60px;
+}
+
+@media screen and (min-width: 0px) and (max-width: 550px) {
+    .menu_container {
+        width: 100%;
+    }
+
+    .menu li {
+        padding-right: 20px;
+        padding-left: 10px;
+    }
+}
+
+@media screen and (min-width: 0px) and (max-width: 800px) {
+    .exibit-gallery { 
+        justify-content: center;
+    }
+
+    .exibit-gallery div {
+        flex-grow: 2;
+        width: 401px;
+        text-align: center;
+    }
+    .exibit-gallery .single {
+        max-width: 401px;
+    }
+
+    .exibit-gallery div img  {
+        max-width: 375px;
+    }
+
+    #portada1-exibit {
+        max-height: 2200px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #portada2-exibit {
+        max-height: 5200px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #portada1-exibit div img {
+        width: 375px;
+    }
+
+    #portada2-exibit div img {
+        width: 375px;
+    }
 }
 
 
-
-
-.splash {
-    background: url(img/start.jpg);
-    background-size: cover;
-    background-position: center top;
-    background-repeat: no-repeat;
-    height: 100vh;
-}
-.splash-out {
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 3s ease-in, visibility 0s 3s;
-}
-#sub_title {
-    padding-left: 35px;
-}
